# netset2p2p

./: CHANGELOG.md  README.md  pyproject.toml
.github/badges/: coverage.json
.github/workflows/: ci.yml
scripts/: release.py  update_coverage_badge.py
