[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "netset2p2p"
version = "1.0.5"
description = "Convert netset files to p2p files."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Matthew Craig", email = "15974146+taggedzi@users.noreply.github.com" },
]
keywords = ["netset", "p2p", "converter", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/taggedzi/netset2p2p"
Repository = "https://github.com/taggedzi/netset2p2p"
Issues = "https://github.com/taggedzi/netset2p2p/issues"

[project.scripts]
netset2p2p = "netset2p2p.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/netset2p2p"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --cov=netset2p2p --cov-report=term-missing --cov-fail-under=85"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["netset2p2p"]
mypy_path = "src"

[tool.coverage.run]
source = ["netset2p2p"]

[tool.coverage.report]
fail_under = 85
show_missing = true

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.0.0",
  "pytest-cov>=7.1.0",
  "ruff>=0.5.0",
]
